parseMultiRequestContent